# statwise

./: .dockerignore  .env.example  .gitattributes  .gitignore  .replit  404.css  404.html  CNAME  Dockerfile.ai  Dockerfile.frontend  PUSH_LOG.md  README.md  SUPABASE_BUCKET_SETUP.md  SUPABASE_EMAIL.md  activity-manager.js  consent-styles.css  continue.md  database_schema.sql  docker-compose.yml  env.example.js  env.js  eslint.config.js  eslint_report.txt  firebase.rules  firestore.rules  google-cmp.js  index.html  index.js  logo.js  main.js  manager.js  manifest.json  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  requirements.txt  robot.md  scraper.py  (+8 more)
.agents/: agent_assets_metadata.toml
.idx/: dev.nix
Auth/: auth.css  auth.js  forgot-password.html  login.html  signup.html
Landing_Page/: index.html  styles.css
Loader/: loader.css  loader.js
Offline/: offline.css  offline.html
Pages/: forum.html  history.html  home.html  inactive.html  insights.html  manage-subscription.css  manage-subscription.html  manage-subscription.js  profile.html  referral.html  subscriptions.html
ai/: AI_DOCUMENTATION.md  AI_IMPROVEMENT_PLAN.md  backtest.py  dataset_links.txt  requirements.txt  retrain.py  run_pipeline.sh  scheduler.py  train.py  train_statsbomb.py
attached_assets/: Pasted--StatWise-Complete-Supabase-Database-Schema-Complete-schema-for-StatWise-AI-Sports-Prediction--1757435048730_1757435048734.txt  Pasted--workspace-python3-ai-backtest-py-08-13-52-INFO-Loading_1775554005646.txt
js/: ads.js  auth.js  main.js  payments.js  user.js
(+251 files in other folders)
