[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "supabase>=2.28.3",
    "xgboost>=3.2.0",
]
